--- a/Practice/Practice/src/main/resources/application.properties
+++ b/Practice/Practice/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # --- JPA ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 # --- Actuator endpoints exposure ---
 management.endpoints.web.exposure.include=health,info,metrics
@@ -22,3 +25,6 @@ management.endpoint.health.group.liveness.include=livenessState
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+
+
